--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    //Schadcn note
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
